@@ -6,7 +6,8 @@
 * FEATURE: Add Special:Move.
 * FEATURE: Add jamwiki:linkParam tag, remove jamwiki:encode and
   jamwiki:decode tags.
-* FEATURE: Provide download links for non-image files.
+* FEATURE: For non-image files, [[Image:File]] should display as a download
+  link.
 * BUG: Apostrophes were not being escaped by the parser.
 * BUG: <pre> tags might not be closed by the parser.
 * BUG: Use of the edit resolve functionality with a section edit could cause
@@ -15,6 +16,7 @@
 * BUG: Login page displayed the wrong login message.
 * BUG: Do not allow user names that vary only by case ("user" vs. "uSer").
 * BUG: Fix issue with browsers that encode URL as UTF-8 instead of ISO-8859-1.
+* BUG: Remove extra "/" that could sometimes appear in image URLs.
 * FEATURE: Danish translations from Anders Monrad (g9adm).
 * FEATURE: Updated German translations from Axel Kramer (axelclk).
 * FEATURE: Updated Hungarian translations from bDaneE.
